...
    }
    
    var body: some View {
        NavigationView {
            VStack {
                List {
                    FormFieldInputView(text: $addtaskViewModel.titleText, fieldTitle: "Task Title", placeHolder: "Enter task title", fieldError: $addtaskViewModel.titleError)
                        .listRowSeparator(.hidden)
                    
                    FormFieldInputView(text: $addtaskViewModel.description, fieldTitle: "Task Description", placeHolder: "Enter task description", fieldError: $addtaskViewModel.descriptionError, fieldType: .textDescription)
                        .listRowSeparator(.hidden)
                    
                    FormFieldInputView(fieldTitle: "Due Date", fieldType: .datePicker, date: $addtaskViewModel.date)
...
